Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMnsuDVdqHWqDz+km0An17k",
+      "authorship_tag": "ABX9TyO7/N8kvUxCcduzbCVbpYh9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
         "id": "nGHopTMKg90l",
         "outputId": "1a7c5f14-4120-40ec-e99c-1ad01c9b6dd2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1101,7 +1101,7 @@
       "metadata": {
         "id": "iAmEDu_KF4Ue"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1126,7 +1126,7 @@
       "metadata": {
         "id": "ICSEyJdsGhJS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1174,7 +1174,7 @@
         },
         "outputId": "3e061520-005d-49d6-fcae-8b63bc10ff3f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1209,7 +1209,7 @@
       "metadata": {
         "id": "zGlQ2yMsHvJq"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1242,7 +1242,7 @@
       "metadata": {
         "id": "QmHW5kriIvms"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1265,7 +1265,7 @@
       "metadata": {
         "id": "7a1Q-Z7nr1gD"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1390,7 +1390,7 @@
         },
         "outputId": "b9e18a43-9ef6-4f43-dc41-7301e666d43d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1452,7 +1452,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1520,7 +1520,7 @@
         "id": "SIqSQqx8s1wC",
         "outputId": "074376a4-64b9-47c7-a796-3c3d799c7abb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1558,7 +1558,7 @@
       "metadata": {
         "id": "54H5VCiXMIb1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1607,7 +1607,7 @@
         "id": "EunrhRWrMhL2",
         "outputId": "34980d4a-779b-4706-c0ee-ac6584fa20f2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,7 +1684,7 @@
         "id": "xSxrf6bBNLJS",
         "outputId": "a0a7a14c-32a3-4cb9-fdc0-c56b181cc530"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1723,7 +1723,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1769,7 +1769,7 @@
         "plt.legend(['train','validation'])\n",
         "plt.show()\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1800,7 +1800,7 @@
         "\n",
         "print(\"Accuracy training data: %.2f%% , test: %.2f%% \" % (scores_train[1]*100, scores_test[1]*100 ))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1864,7 +1864,7 @@
         "    else:\n",
         "        ax.text(0, 7, str(expected[i])+\" \"+str(np.argmax(predicted[i])), color='red')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1899,7 +1899,7 @@
           "height": 149
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2541,7 +2541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "WZKbyU2-AiY-"
       },
@@ -2552,7 +2552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "wx-zNbLqB4K8",
         "colab": {
@@ -2582,7 +2582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "YfIk2es3hJEd"
       },
@@ -2613,7 +2613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "a4fYMGxGhrna"
       },
@@ -2624,7 +2624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "NFC2ghIdiZYE"
       },
@@ -2636,7 +2636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "S4PIDhoDLbsZ"
       },
@@ -2648,7 +2648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "-yKCCQOoJ7cn"
       },
@@ -2682,7 +2682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "6bpTcDqoLWjY"
       },
@@ -2762,7 +2762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "gl7jcC7TdPTG",
         "colab": {
@@ -2858,7 +2858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "dw2tPLmk2pEP"
       },
@@ -2929,7 +2929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "gDkA05NE6QMs",
         "colab": {
@@ -2990,7 +2990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "psQfmXxYKU3X"
       },
@@ -3013,7 +3013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "wkMNfBWlT-PV"
       },
@@ -3039,7 +3039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "90BIcCKcDMxz"
       },
@@ -3060,7 +3060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "iWCn_PVdEJZ7"
       },
@@ -3081,7 +3081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "NS2GWywBbAWo"
       },
@@ -3107,7 +3107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "3t5ibNo05jCB"
       },
@@ -3139,7 +3139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "2M7LmLtGEMQJ"
       },
@@ -3183,7 +3183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RmdVsmvhPxyy"
       },
@@ -3222,7 +3222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "Ly3UN0SLLY2l",
         "colab": {
@@ -4195,6 +4195,26 @@
         "---\n",
         "\n",
         "\n",
+        "#<font color='green'> **Text translation**\n",
+        "###<font color='green'> **English to Polish translator**\n",
+        "\n",
+        "Having a set of phrases in English and in Polish (from the ANKI web page https://www.manythings.org/anki ) we can train the network to translate English to Polish and vice versa.\n",
+        "\n",
+        "The example code is here:\n",
+        "https://github.com/marcinwolter/AI_Lublin_2023/blob/main/neural_machine_translation_with_keras_nlp.ipynb"
+      ],
+      "metadata": {
+        "id": "CK6WJiiglvNj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "\n",
         "---\n",
         "\n",
@@ -4281,8 +4301,7 @@
       "source": [
         "##**AI learning parallel parking**\n",
         "\n",
-        "[Parallel parking]( https://youtu.be/MlFZjLkEIEw )\n",
-        ""
+        "[Parallel parking]( https://youtu.be/MlFZjLkEIEw )\n"
       ],
       "metadata": {
         "id": "PFoX8XjCTEgj"
